# glove80-firmware-updater

./: Cargo.toml  LICENSE  README.md  README.tpl  example_firmware.uf2
.github/workflows/: ci-main.yml  ci-release.yml  ci-staging.yml
src/: main.rs
